[workspace]
resolver = "2"

members = [
    "commons",
    "engine",
    "mountain",
    "network",
    "terrain_gen",
    "world"
]

[workspace.dependencies]
bincode = "1"
egui_glium = "0"
image = "0"
glium = "0"
lazy_static = "1"
line_drawing = "1"
maplit = "1"
nalgebra = "0"
num = "0"
rand = "0"
serde = { version = "1", features = ["derive"] }
simdnoise = "3"
tempfile = "3"
thiserror = "1"
tokio = {version = "1", features = ["sync"] }
winit = "0"