[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
commons = { path = "../commons" }
image = { workspace = true }
glium = { workspace = true }
nalgebra = { workspace = true }
terrain_gen = { path = "../terrain_gen" }
thiserror = { workspace = true }
winit = { workspace = true }