[package]
name = "isometric"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
commons = { path = "../commons" }
image = "0.24.1"
glium = "0.31.0"
nalgebra = "0.31.0"
terrain_gen = { path = "../terrain_gen" }
