[package]
name = "mountain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { workspace = true }
commons = { path = "../commons" }
egui_glium = { workspace = true }
engine = { path = "../engine" }
lazy_static = { workspace = true }
line_drawing = { workspace = true }
nalgebra = { workspace = true }
network = { path = "../network" }
rand = { workspace = true }
serde = { workspace = true }
terrain_gen = { path = "../terrain_gen" }